[package]
name = "judge-duck"
version = "0.1.0"
authors = ["Runji Wang <wangrunji0408@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = "0.4.3"
uefi-services = "0.2.0"
log = "0.4"
xmas-elf = "0.7"
x86_64 = "0.7"
trapframe = "0.1.0"

[patch.crates-io]
uefi = { git = 'https://github.com/rcore-os/uefi-rs', branch = "alloc-align" }
